gracile-core/tests/fixtures/snapshots/snapshots__fixtures__const_and_raw.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<p>Hello, World!</p>
<pre>
Template syntax: {#if cond} body {/if}
Each loop: {#each items as item} {item} {/each}
</pre>
