gracile-core/tests/fixtures/snapshots/snapshots__fixtures__control_flow.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<span class="grade b">B</span>
