gracile-core/tests/fixtures/snapshots/snapshots__fixtures__custom_filter.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<p>
  Aaaah <strong>ALICE!!!</strong>
</p>
