gracile-core/tests/fixtures/snapshots/snapshots__fixtures__each_destructure.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<table>
  <thead>
    <tr><th>Name</th><th>Price</th><th>Stock</th></tr>
  </thead>
  <tbody>
    <tr>
      <td>Widget</td>
      <td>$9.99</td>
      <td>In stock</td>
    </tr>
    <tr>
      <td>Gadget</td>
      <td>$24.99</td>
      <td>Out of stock</td>
    </tr>
  </tbody>
</table>
