gracile-core/tests/fixtures/snapshots/snapshots__fixtures__each_empty_renders_else.snap
---
source: gracile-core/tests/fixtures/mod.rs
description: "{:else} branch renders when the list is empty"
expression: output
---
<ul>
  <li>No items available.</li>
</ul>
