gracile-core/tests/fixtures/snapshots/snapshots__fixtures__each_with_index_and_else.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<ul>
  <li>0. apple</li>
  <li>1. banana</li>
  <li>2. cherry</li>
</ul>
