gracile-core/tests/fixtures/snapshots/snapshots__fixtures__escaping.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<p class="safe">&lt;script&gt;alert(&#x27;xss&#x27;)&lt;/script&gt;</p>
<div class="raw"><em>emphasis</em></div>
