gracile-core/tests/fixtures/snapshots/snapshots__fixtures__include_partial.snap
---
source: gracile-core/tests/fixtures/mod.rs
expression: output
---
<html>
<head>
  <title>Home</title>
</head>
  <body>
    <h1>Hello, Bob!</h1>
  </body>
</html>
